@@ -1,3 +1,11 @@
+2003-08-18  Uwe Pross  <uwe.pross@gmx.net>
+
+	* screenshots/Thomas_Adam-desk-1024x768.php: 
+	* screenshots/Thomas_Adam-desk-1024x768.png: 
+	* screenshots/Thomas_Adam-desk-1024x768-thumb.jpg:
+	* screenshots/desktops.php:
+	Added screenshot from Thomas Adam.
+
 2003-08-17  Uwe Pross  <uwe.pross@gmx.net>
 
 	* logo-competition/logos_new.php:
